[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ingame/null.png" type="Texture" id=1]
[ext_resource path="res://ui/ingame/tool_status_display.gd" type="Script" id=2]

[node name="tool_display" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -600.0
margin_right = 256.0
margin_bottom = -536.0
rect_min_size = Vector2( 256, 64 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="mood_bar" type="ProgressBar" parent="."]
margin_top = 64.0
margin_right = 64.0
margin_bottom = 80.0
rect_rotation = -90.0
value = 25.0
percent_visible = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="texture" type="TextureRect" parent="."]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 64.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="status" type="Label" parent="."]
margin_left = 80.0
margin_right = 336.0
margin_bottom = 64.0
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="status_timer" type="Timer" parent="status"]
wait_time = 5.0
one_shot = true
[connection signal="timeout" from="status/status_timer" to="." method="_on_status_timer_timeout"]
